# ymir

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/capabilities/: did.rs  digest_sri.rs  http_sig.rs  httpsig.rs  kid.rs  mod.rs  signer.rs  verifier.rs
src/config/: mod.rs
src/config/traits/: api_trait.rs  connection_trait.rs  db_trait.rs  did_trait.rs  hosts_trait.rs  is_local.rs  issue_trait.rs  mod.rs  vc_pattern_trait.rs  verify_req_trait.rs  wallet_trait.rs
src/config/types/: api.rs  connection.rs  db.rs  dids.rs  hosts.rs  issue.rs  mod.rs  vc_pattern.rs  verify_req.rs  wallet.rs
src/core_traits/: core_wallet.rs  core_waltid.rs  mod.rs
src/data/: into_active_trait.rs  mod.rs
src/data/entities/: business_mates.rs  issuing.rs  mates.rs  minions.rs  mod.rs  recv_interaction.rs  recv_request.rs  recv_verification.rs  req_interaction.rs  req_request.rs  req_vc.rs  req_verification.rs  token_requirements.rs  vc_request.rs
src/data/migrations/: m20250403_094651_business_mates.rs  m20250403_094651_issuing.rs  m20250403_094651_mates.rs  m20250403_094651_minions.rs  m20250403_094651_recv_interaction.rs  m20250403_094651_recv_request.rs  m20250403_094651_recv_verification.rs  m20250403_094651_req_interaction.rs  m20250403_094651_req_request.rs  m20250403_094651_req_vc.rs  m20250403_094651_req_verification.rs  m20250403_094651_token_requirements.rs  m20250403_094651_vc_request.rs  migrator.rs  mod.rs
src/data/seeders/: mate_seeder.rs  minion_seeder.rs  mod.rs
src/data_xxx/: mod.rs
src/data_xxx/entities/: issuing.rs  mates.rs  minions.rs  mod.rs  recv_interaction.rs  recv_request.rs  req_request.rs  req_verification.rs  vc_request.rs
src/data_xxx/migrations/: m20250403_094651_business_mates.rs  m20250403_094651_mates.rs  m20250403_094651_minions.rs  m20250403_094651_recv_request.rs  m20250403_094651_req_vc.rs  mod.rs
src/data_xxx/seeders/: mate_seeder.rs  mod.rs
src/errors/: constructors.rs  core.rs  error_adapter.rs  error_log_trait.rs  errors.rs  helpers.rs  mod.rs  outcome.rs  response.rs  sub_errors.rs
src/http/: health_router.rs  mod.rs  openapi_router.rs  wallet_router.rs
src/macros/: mod.rs
src/modules/: mod.rs  traits.rs  wallet.rs
src/services/: has_service_trait.rs  mod.rs
src/services/client/: client_trait.rs  mod.rs  rod_client.rs
src/services/identity/: identity_trait.rs  mod.rs  service.rs
src/services/issuer/: issuer_trait.rs  mod.rs
src/services/repo/: mod.rs
src/services/repo_xxx/: mod.rs
src/services/vault/: mod.rs  vault_trait.rs
src/services/verifier/: mod.rs  verifier_trait.rs
src/services/wallet/: mod.rs  wallet_trait.rs
src/types/: mod.rs
src/types/crypto/: canon.rs  mod.rs  proof.rs
src/types/dids/: did_builder.rs  did_config.rs  did_doc.rs  did_service.rs  did_type.rs  dids_info.rs  mod.rs  ver_method.rs
src/types/errors/: mod.rs
src/types/gnap/: access_token.rs  callback.rs  continue_request.rs  credential_res.rs  gr_use.rs  grant_request.rs  grant_response.rs  interact_ref.rs  mod.rs  status.rs
src/types/http/: body.rs  httpsig.rs  mod.rs
src/types/issuance/: build_ctx.rs  cred_config.rs  cred_offer.rs  cred_req.rs  iss_token.rs  issuer_metadata.rs  mod.rs  token_req.rs  vc_issuing.rs
src/types/issuing/: cred_config.rs  cred_offer.rs  cred_req.rs  did_possession.rs  iss_token.rs  issuer_metadata.rs  mod.rs  oauth_server.rs  to_issue.rs  token_req.rs  vc_issuing.rs  well_known_jwk.rs
src/types/jwt/: header.rs  jwt.rs  mod.rs  vc_claim_v1.rs  vc_claims.rs  vc_claims_builder.rs  vc_claims_v2.rs  vp.rs  w3c_vc.rs
src/types/keys/: alg.rs  certificate.rs  crv.rs  crypto_suite.rs  jwk.rs  key.rs  key_data.rs  key_source.rs  kty.rs  macros.rs  mod.rs  private_key.rs  public_key.rs  retrieved_key.rs  (+2 more)
src/utils/: client.rs  hasid.rs  http.rs  mod.rs  parse.rs  present.rs  token.rs  validations.rs
(+295 files in other folders)
