[package]
name = "ymir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.203", features = ["default", "derive"] }
serde_json = { version = "1.0.117", features = ["default"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros", "with-json"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
tracing = "0.1.44"
vaultrs = "0.7.4"
axum = "0.8.8"
thiserror = "2.0.18"
tokio = { version = "1.35.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = { version = "0.4.38", features = ["serde"] }
urlencoding = { version = "2.1.3" }
sha2 = "0.10.9"
rand = "0.9.2"
rand_distr = "0.5.1"
sea-orm-migration = { version = "1.1.1" }