[package]
name = "ymir"
version = "0.8.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros", "with-json"] }
async-trait = "0.1.89"
vaultrs = "0.7.4"
axum = "0.8.8"
tokio = { version = "1.35.0", features = ["full"] }
urlencoding = { version = "2.1.3" }
sea-orm-migration = { version = "1.1.1" }
urn = { version = "0.7.0", features = ["serde"] }
serde_urlencoded = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rsa = "0.9.10"
sha2 = { version = "0.10", features = ["oid"] }
rand = "0.8.5"
pkcs8 = "0.11.0"
bs58 = "0.5"
base64 = { version = "0.22", features = ["alloc"] }
json-canon = "0.1.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
uuid = { version = "1.23.1", features = ["v4"] }
x509-parser = "0.18.1"